Add private_function for private functions within glibc [BZ #21598]
USE_REGPARMS in config.h.in is only used to control how parameters are
passed for internal functions on i386.  On i386, we define

 #define internal_function __attribute__ ((regparm (3), stdcall))

so that we pass up to 3 integer parameters in registers for internal
functuons on i386.  i386 has

_dl_runtime_resolve:

        movl (%esp), %ecx
        movl %eax, (%esp)       # Store the function address.
        movl 4(%esp), %eax
        ret $12                 # Jump to function address.

which is incompatible with Shadow Stack in Intel Control-flow Enforcement
Technology (CET) instructions:

https://software.intel.com/sites/default/files/managed/4d/2a/control-flow-enforcement-technology-preview.pdf

since shadow stack doesn't match return stack.  We need to use register
indirect branch via %ecx.  That means only 2 parameters can be passed
in registers for external function calls with lazy binding when shadow
stack is enabled.  However, internal_function, which should be used only
with hidden function within libc.so, are also used with private function
calls between different shared objects of glibc.

This patch removes USE_REGPARMS and internal_function from config.h.in.
It adds a new header file, function-attrs.h, to define internal_function
and private_function, which is for private function calls between
different shared objects.  Currently, sysdeps/i386/function-attrs.h
defines private_function as

 #define private_function __attribute__ ((regparm (3), stdcall))

There is no change in shared objects on Linux/i686 nor Linux/x86_64.

When shadow stack is enabled, private_function will be defined as

 #define private_function __attribute__ ((regparm (2), stdcall))

so that %ecx can be used as scratch register by _dl_runtime_resolve.

	[BZ #21598]
	* config.h.in (USE_REGPARMS): Removed.
	(internal_function): Likewise.
	* debug/fortify_fail.c (__fortify_fail): Replace internal_function
	with privat

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2017-08-11  Florian Weimer  <fweimer@redhat.com>
+
+	[BZ #21242]
+	* assert/assert.h [__GNUC__ && !__STRICT_ANSI__] (assert):
+	Suppress pedantic warning resulting from statement expression.
+	(__ASSERT_FUNCTION): Add missing __extension__.
+
 2017-08-11  Siddhesh Poyarekar  <siddhesh@sourceware.org>
 
 	* benchtests/bench-memmove-large.c: Print output in JSON
